--- a/client2/package.json
+++ b/client2/package.json
@@ -19,6 +19,7 @@
     "react-feather": "^2.0.10",
     "react-router": "^7.5.3",
     "react-router-dom": "^7.5.3",
+    "recharts": "^2.15.3",
     "tailwindcss": "^4.1.5"
   },
   "devDependencies": {
